--- a/src/ProductPage2.css
+++ b/src/ProductPage2.css
@@ -215,17 +215,19 @@ td {
 }
 
 table {
-  width: 100% !important;
-  border: 1px solid #ddd;
+  /* width: 10% !important; */
+  /* border: 1px solid #ddd; */
   border-collapse: separate !important;
+  /* border-collapse: collapse !important; */
   border-radius: 10px;
+  margin-top: 20px;
 }
 
 .table__row {
   border-bottom: 1px solid #ddd;
-  /* padding: 10px; */
+  padding: 10px;
 }
-
+/* 
 .table__row > th,
 td {
   padding: 10px;
@@ -247,4 +249,4 @@ td {
 
 .blank__heading {
   width: 170px;
-}
+} */
