--- a/src/Header.css
+++ b/src/Header.css
@@ -10,20 +10,19 @@
   margin: 0 auto;
   padding-left: 0;
   padding-right: 0;
-  
 }
 
 ul {
-list-style: none;
-margin: 0;
-padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-color: var(--text-color);
-text-decoration: none;;
+  color: var(--text-color);
+  text-decoration: none;
 }
-.header{
+.header {
   height: 80px;
   max-width: 95%;
   width: 90%;
@@ -33,10 +32,9 @@ text-decoration: none;;
   padding-left: 0;
   padding-right: 0;
   margin-top: 10px;
-  
+
   /* margin-left: 5%; */
 }
-
 
 .search__results {
   position: absolute;
@@ -52,28 +50,28 @@ text-decoration: none;;
   padding-bottom: 10px;
 }
 
-.search__result-item{
-padding-left: 20px;
-font-size: 18px;
-}
-
-.menu__item{
+.search__result-item {
+  padding-left: 20px;
   font-size: 18px;
 }
-.menu__item:hover{
+
+.menu__item {
+  font-size: 18px;
+}
+.menu__item:hover {
   cursor: pointer;
 }
 
-.tags__text{
+.tags__text {
   color: black;
   font-size: large;
 }
-.tags__text:hover{
+.tags__text:hover {
   text-decoration: none;
   color: black;
 }
 
-.tags__heading{
+.tags__heading {
   text-transform: capitalize;
   font-weight: 800;
 }
@@ -92,7 +90,7 @@ font-size: 18px;
 
 @media only screen and (max-width: 768px) {
   .header__menu {
-      display:none;
+    display: none;
   }
 }
 
@@ -104,13 +102,12 @@ font-size: 18px;
   background-color: white;
   overflow: hidden;
   z-index: 10000;
-  position:fixed;
-  top:0;
-  
+  position: fixed;
+  top: 0;
 }
 
-.logoName{
-  margin : 0 18px;
+.logoName {
+  margin: 0 18px;
 }
 
 .header__logo {
@@ -120,19 +117,18 @@ font-size: 18px;
   margin: 0 10px;
 }
 
-.searchBottom{
-flex: 2;
-align-items: center;
-flex-direction: column;
-position: absolute;
+.searchBottom {
+  flex: 2;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
 }
 
-.header__mainColumn{
-width: 100%;
+.header__mainColumn {
+  width: 100%;
 }
 
 .header__search {
-  
   display: flex;
   flex: 1;
   align-items: center;
@@ -141,7 +137,7 @@ width: 100%;
 }
 
 .header__searchInput {
-  margin: 0!important;
+  margin: 0 !important;
   height: 45px;
   padding: 10px;
   padding-left: 25px;
@@ -164,65 +160,60 @@ width: 100%;
 }
 
 .header__search--head3 {
-  
-display: flex;
-flex: 1;
-align-items: center;
-border-radius: 10px;
-border: 1px solid #ddd ;
-background-color: #f4f4f4;
-margin-left: 3rem;
-/* width: 55vw; */
-/* border: 1px solid #ddd; */
+  display: flex;
+  flex: 1;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  background-color: #f4f4f4;
+  margin-left: 3rem;
+  /* width: 55vw; */
+  /* border: 1px solid #ddd; */
 }
 
-.search__component{
-  width:650px; /* or whatever width you want. */
-   max-width:650px; /* or whatever width you want. */
-   display: inline-block;
+.search__component {
+  width: 650px; /* or whatever width you want. */
+  max-width: 650px; /* or whatever width you want. */
+  display: inline-block;
 }
 
 .header__searchInput--head3 {
-margin: 0!important;
-height: 45px;
-padding: 10px;
-padding-left: 25px;
-border-radius: 30px;
-/* width: 30vw; */
-border: none;
-background-color: #f4f4f4;
-font-size: 20px;
-
+  margin: 0 !important;
+  height: 45px;
+  padding: 10px;
+  padding-left: 25px;
+  border-radius: 30px;
+  /* width: 30vw; */
+  border: none;
+  background-color: #f4f4f4;
+  font-size: 20px;
 }
 
-.menu__popup{
+.menu__popup {
   background-color: #fefefe;
 }
 
-.menu__popup--bottom{
-  
+.menu__popup--bottom {
 }
-.computerIcon{
+.computerIcon {
   color: blue;
 }
 
-.categories__popup--nav{
-  border-bottom: none!important;
+.categories__popup--nav {
+  border-bottom: none !important;
   border-right: 2px solid #f4f5f9;
-  
 }
 
-.category__icon{
+.category__icon {
   margin-right: 10px;
 }
 
 @media only screen and (min-width: 1300px) {
-
   .header__searchInput--head3 {
-    width: 30vw; 
+    width: 30vw;
   }
 
-  .navbar-nav{
+  .navbar-nav {
     width: 100%;
     height: 90px;
   }
@@ -232,38 +223,36 @@ font-size: 20px;
     height: 60px;
     object-fit: contain;
     margin: 0 10px;
-  }  
-
+  }
 }
-.close{
+.close {
   font-size: 35px;
   margin-right: 30px;
   opacity: 1;
-  color: #0491ED;
+  color: #0491ed;
 }
-.close:hover{
-  color: #0491ED;
+.close:hover {
+  color: #0491ed;
   opacity: 1.2;
 }
-.menu-title2{
+.menu-title2 {
   font-weight: 700;
   font-size: 35px;
   line-height: 28px;
 }
-.categories__grid2{
-  margin-top:80px !important;
+.categories__grid2 {
+  margin-top: 80px !important;
 }
 
-.categories__grid{
+.categories__grid {
   width: 25% !important;
 }
 
 @media only screen and (min-width: 1200px) {
-
   .header__searchInput--head3 {
     width: 30vw;
   }
-  .navbar-nav{
+  .navbar-nav {
     width: 90%;
   }
 
@@ -273,25 +262,25 @@ font-size: 20px;
     object-fit: contain;
     margin: 0 10px;
   }
-  .nav-link{
+  .nav-link {
     font-size: 12px;
     font-weight: 500;
     text-decoration: none;
     color: #ddd;
   }
-  .header__optionLineOne{
+  .header__optionLineOne {
     font-size: 8px;
     color: white;
   }
-  
-  .header__optionLineTwo{
+
+  .header__optionLineTwo {
     font-size: 11px;
     font-weight: 800;
     color: white;
   }
 
   .header__searchInput {
-    margin: 0!important;
+    margin: 0 !important;
     height: 30px;
     padding: 7px;
     padding-left: 20px;
@@ -308,16 +297,14 @@ font-size: 20px;
     padding-left: 20px;
     border-radius: 25px;
     font-size: 16px;
-    }
-
+  }
 }
 
 @media only screen and (min-width: 1500px) {
-
   .header__searchInput--head3 {
     width: 30vw;
   }
-  .navbar-nav{
+  .navbar-nav {
     width: 90%;
   }
 
@@ -335,19 +322,19 @@ font-size: 20px;
     margin: 0 10px;
   }
 
-  .nav-link{
+  .nav-link {
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
     color: #ddd;
   }
 
-  .header__optionLineOne{
+  .header__optionLineOne {
     font-size: 10px;
     color: white;
   }
-  
-  .header__optionLineTwo{
+
+  .header__optionLineTwo {
     font-size: 13px;
     font-weight: 700;
     color: white;
@@ -359,8 +346,7 @@ font-size: 20px;
     padding-left: 20px;
     border-radius: 25px;
     font-size: 16px;
-    }
-
+  }
 }
 
 .header__searchInput--head3:focus {
@@ -374,13 +360,13 @@ font-size: 20px;
   cursor: pointer;
 }
 
-.header__optionLineOne{
+.header__optionLineOne {
   font-size: 12px;
   color: white;
   cursor: pointer;
 }
 
-.header__optionLineTwo{
+.header__optionLineTwo {
   font-size: 15px;
   font-weight: 800;
   color: white;
@@ -395,7 +381,6 @@ font-size: 20px;
 
 .header__nav {
   justify-content: space-evenly;
-  
 }
 
 .header__option {
@@ -409,18 +394,17 @@ font-size: 20px;
   max-height: 100%;
 }
 
-.navbar-nav{
+.navbar-nav {
   padding-left: 10px;
   padding-right: 10px;
   width: 90%;
   align-items: center;
   justify-content: space-between;
   margin-left: 10%;
-  
 }
 
-.navbar{
-  background-color: #2D3338;
+.navbar {
+  background-color: #2d3338;
 }
 
 .glyphicon {
@@ -433,100 +417,129 @@ font-size: 20px;
 
 @media only screen and (min-width: 976px) {
   .glyphicon {
-      display: none;
+    display: none;
   }
 }
 
-.dropdown-menu{
+.dropdown-menu {
   width: 30rem;
 }
 
-.dropdown-item{
+.dropdown-item {
   font-size: 16px !important;
   font-weight: 600 !important;
   padding: 10px 25px !important;
-  } */
-
-
-.nav-link:hover{
+}
+*/ .nav-link:hover {
   text-decoration: none;
   color: #fff;
   transform: scale(1.04);
   transition: 300ms ease-in-out;
 }
 
-
 .dropdown-submenu {
-position: fixed;
-width: 600px;
+  position: fixed;
+  width: 600px;
 
-left: 50%;
+  left: 50%;
 
-top: -9px!important;
-}
-
-.submenu2{
-position: fixed;
-width: 600px;
-
-left: 50%;
-
-top: -50.5px!important;
-}
-.submenu3{
-  top: -91.5px!important;
-  height: 600px;
-}
-.submenu4{
-  top: -135.5px!important;
-  height: 600px;
-}
-.submenu5{
-  top: -176px!important;
-  height: 600px;
-}
-.submenu6{
-  top: -219px!important;
-  height: 600px;
-}
-.submenu7{
-  top: -260px!important;
-  height: 600px;
-}
-.submenu8{
-  top: -302px!important;
-  height: 600px;
-}
-.submenu9{
-  top: -345px!important;
-  height: 600px;
-}  
-.submenu10{
-  top: -389px!important;
-  height: 600px;
-}
-.submenu11{
-  top: -430px!important;
-  height: 600px;
-}
-.submenu12{
-  top: -470px!important;
-  height: 600px;
-}
-.submenu13{
-  top: -510px!important;
-}
-.submenu14{
-  top: -556px!important;
+  top: -9px !important;
 }
 
-.sorting__dropdown{
-  background-color: #F2F3F8;
+.submenu2 {
+  position: fixed;
+  width: 600px;
+
+  left: 50%;
+
+  top: -50.5px !important;
+}
+.submenu3 {
+  top: -91.5px !important;
+  height: 600px;
+}
+.submenu4 {
+  top: -135.5px !important;
+  height: 600px;
+}
+.submenu5 {
+  top: -176px !important;
+  height: 600px;
+}
+.submenu6 {
+  top: -219px !important;
+  height: 600px;
+}
+.submenu7 {
+  top: -260px !important;
+  height: 600px;
+}
+.submenu8 {
+  top: -302px !important;
+  height: 600px;
+}
+.submenu9 {
+  top: -345px !important;
+  height: 600px;
+}
+.submenu10 {
+  top: -389px !important;
+  height: 600px;
+}
+.submenu11 {
+  top: -430px !important;
+  height: 600px;
+}
+.submenu12 {
+  top: -470px !important;
+  height: 600px;
+}
+.submenu13 {
+  top: -510px !important;
+}
+.submenu14 {
+  top: -556px !important;
+}
+
+.sorting__dropdown {
+  background-color: #f2f3f8;
   color: black;
   border-radius: 100px;
 }
 
-.raquo{
+.raquo {
   align-items: flex-end;
 }
+/* drawer */
+.Mui-expanded {
+  background-color: white;
+}
+.Mui-selected {
+  background-color: white;
+}
+.MuiTreeItem-root {
+  width: 100%;
+  /* background-color: white; */
+}
+.MuiTreeView-root {
+  background-color: white;
 
+  width: 200%;
+}
+.MuiTreeItem-content {
+  font-size: 200px;
+}
+
+.MuiTreeItem-label {
+  font-size: 30px;
+  padding: 10px;
+  /* background-color: red; */
+}
+.sidebar-icon {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .sidebar-icon {
+    display: block;
+  }
+}
