--- a/src/Header.css
+++ b/src/Header.css
@@ -511,7 +511,12 @@ a {
   align-items: flex-end;
 }
 /* drawer */
-
+.Mui-expanded {
+  background-color: white;
+}
+.Mui-selected {
+  background-color: white;
+}
 .MuiTreeItem-root {
   width: 100%;
   /* background-color: white; */
@@ -526,30 +531,15 @@ a {
 }
 
 .MuiTreeItem-label {
-  /* font-size: 30px; */
-  background-color: white;
-  font-family: 'Open Sans Condensed';
+  font-size: 30px;
   padding: 10px;
   /* background-color: red; */
 }
-.MuiTreeItem-iconContainer {
-  position: absolute;
-  right: 0;
-  color: gray;
-}
-
-/* .sidebar-icon {
+.sidebar-icon {
   display: none;
-} */
-.Mui-selected .MuiTreeItem-content .MuiTreeItem-label {
-  background-color: 'white';
 }
 @media screen and (max-width: 767px) {
   .sidebar-icon {
     display: block;
   }
-}
-.imgsidebar {
-  width: 350px;
-  height: 100px;
 }
