--- a/src/Header.css
+++ b/src/Header.css
@@ -528,7 +528,7 @@ a {
 .MuiTreeItem-label {
   /* font-size: 30px; */
   background-color: white;
-  font-family: 'Open Sans Condensed';
+  font-family: "Open Sans Condensed";
   padding: 10px;
   /* background-color: red; */
 }
@@ -538,11 +538,11 @@ a {
   color: gray;
 }
 
-/* .sidebar-icon {
+.sidebar-icon {
   display: none;
-} */
+}
 .Mui-selected .MuiTreeItem-content .MuiTreeItem-label {
-  background-color: 'white';
+  background-color: "white";
 }
 @media screen and (max-width: 767px) {
   .sidebar-icon {
