--- a/src/Header.css
+++ b/src/Header.css
@@ -528,21 +528,21 @@ a {
 .MuiTreeItem-label {
   /* font-size: 30px; */
   background-color: white;
-  font-family: "Open Sans Condensed";
+  font-family: 'Open Sans Condensed';
   padding: 10px;
   /* background-color: red; */
 }
-.MuiTreeItem-iconContainer {
+/* .MuiTreeItem-iconContainer {
   position: absolute;
   right: 0;
   color: gray;
-}
+} */
 
 .sidebar-icon {
   display: none;
 }
 .Mui-selected .MuiTreeItem-content .MuiTreeItem-label {
-  background-color: "white";
+  background-color: 'white';
 }
 @media screen and (max-width: 767px) {
   .sidebar-icon {
