--- a/src/ProductCategory.css
+++ b/src/ProductCategory.css
@@ -268,9 +268,10 @@ input[type='checkbox'] {
   height: 70px;
   width: 100%;
   padding: 15px;
+  left: 3%;
   /* margin: 10px; */
   position: fixed;
-  bottom: 0px;
+  bottom: 10px;
   display: none;
 }
 .btn-filter {
@@ -278,14 +279,18 @@ input[type='checkbox'] {
   background-color: #0096ff;
   color: white;
   padding: 10px;
-  font-size: 16px;
+  font-size: 14px;
   border-radius: 5px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  height: 20px;
   margin-right: 10px;
+  border: 1px solid #0096ff;
+  width: 100px;
   text-transform: uppercase;
+  text-align: center;
 }
 .btn-shotby {
   all: unset;
@@ -293,7 +298,27 @@ input[type='checkbox'] {
   color: #0096ff;
   border: 1px solid #0096ff;
   padding: 10px;
-  font-size: 16px;
+  font-size: 14px;
+  border-radius: 5px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  height: 20px;
+  margin-right: 10px;
+  text-transform: uppercase;
+  width: 100px;
+  text-align: center;
+}
+.btn-upmove {
+  all: unset;
+  background-color: #0096ff;
+  color: white;
+  /* border: 1px solid #0096ff; */
+  padding: 10px;
+  height: 20px;
+  width: 20px;
+  font-size: 10px;
   border-radius: 5px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
@@ -301,9 +326,8 @@ input[type='checkbox'] {
   outline: none;
   margin-right: 10px;
   text-transform: uppercase;
-}
-.btn-upmove {
-  float: right;
+  border: 1px solid #0096ff;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
