--- a/src/blog.css
+++ b/src/blog.css
@@ -21,3 +21,48 @@
   -moz-box-shadow: 2px 7px 24px -9px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
+.inputsearch {
+  float: right;
+  border: 1px solid #d4d4d4;
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 20px;
+}
+.searchinput {
+  outline: none;
+  -webkit-appearance: none;
+  box-shadow: none !important;
+  border: 0;
+  width: 240px;
+}
+.btn-searchblog {
+  border: 0;
+  padding: 0;
+  /* background-color: black; */
+}
+.blpagehead {
+  font-size: 72px;
+}
+.imgbloghead {
+  width: 100%;
+  height: 500px;
+  border-radius: 10px;
+  float: right;
+}
+.headerleft {
+  margin-top: 100px;
+  align-items: center;
+  justify-content: center;
+}
+.textdecoration:hover {
+  text-decoration: underline;
+}
+.blog-container {
+  padding: 0 20px 0;
+}
+.new1 {
+  border: 0.5px solid #f4f4f4;
+}
+.blpagesubhead {
+  font-weight: 700;
+}
